[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oss_health"
authors = [
    {name = "Richard Shadrach", email = "rhshadrach@gmail.com"},
]
description = "Open Source Software Health Report"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "python-dateutil",
    "pygithub",
    "pypisearch",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "oss_health/VERSION"}

[project.urls]
homepage = 'https://github.com/rhshadrach/oss_health'
documentation = 'https://rhshadrach.github.io/oss_health/'
repository = 'https://github.com/rhshadrach/oss_health'

[project.optional-dependencies]
lint = [
    "black",
    "codespell",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pyright",
    "pyupgrade",
    "ruff",
    "vulture",
]
doc = ["sphinx"]
test = ["pytest"]
dev = ["oss_health[lint, test, doc]"]

[tool.codespell]
ignore-words-list = "ser"

[tool.isort]
profile = "black"
